--- a/src/index.css
+++ b/src/index.css
@@ -42,12 +42,14 @@ a:hover {
 
 body {
   margin: 0;
-  display: flex;
-  place-items: center;
   min-width: 320px;
   min-height: 100vh;
   background-color: var(--bg-primary);
   color: var(--text-primary);
+}
+
+#app {
+  min-height: 100vh;
 }
 
 h1 {
